fix: agrega pruebas unitarias
agrega pruebas unitarias
agrega estructura proyecto en readme
agrega correccion de issues sonar